// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`esbuild plugin > should handle a JSON schema with a reference 1`] = `
""use strict";
(() => {
  // src/fixtures/api.openapi.json
  var api_openapi_default = {
    openapi: "3.0.0",
    info: {
      title: "My great API",
      description: "Great description",
      version: "1.0.0"
    },
    paths: {
      "/my/path": {
        get: {
          summary: "Some GET request",
          responses: {
            "200": {
              description: "Some response",
              content: {
                "application/json": {
                  schema: {
                    type: "object",
                    properties: {
                      someKey: {
                        type: "string"
                      }
                    },
                    required: [
                      "someKey"
                    ]
                  },
                  example: {
                    someKey: "some value"
                  }
                }
              }
            }
          }
        }
      }
    }
  };

  // src/fixtures/esbuild/main-json.ts
  console.log(api_openapi_default);
})();
"
`;

exports[`esbuild plugin > should handle a YAML schema with a reference 1`] = `
""use strict";
(() => {
  // src/fixtures/api.yaml
  var api_default = {
    openapi: "3.0.0",
    info: {
      title: "My great API",
      description: "Great description",
      version: "1.0.0"
    },
    paths: {
      "/my/path": {
        get: {
          summary: "Some GET request",
          responses: {
            "200": {
              description: "Some response",
              content: {
                "application/json": {
                  schema: {
                    type: "object",
                    properties: {
                      someKey: {
                        type: "string"
                      }
                    },
                    required: [
                      "someKey"
                    ]
                  },
                  example: {
                    someKey: "some value"
                  }
                }
              }
            }
          }
        }
      }
    }
  };

  // src/fixtures/esbuild/main.ts
  console.log(api_default);
})();
"
`;
